# SimulatoreRelaisApparato

./: .gitignore  CMakeLists.txt  README.md  README_it.md  SHORTCUTS.md  SHORTCUTS_it.md  abstractcircuitnode.cpp  abstractcircuitnode.h  abstractrelais.cpp  abstractrelais.h  circuitcable.cpp  circuitcable.h  closedcircuit.cpp  closedcircuit.h  electriccircuit.cpp  electriccircuit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  relaismodel.cpp  relaismodel.h  tilerotate.cpp  tilerotate.h
src/: CMakeLists.txt  info.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rightclickemulatorfilter.cpp  rightclickemulatorfilter.h
src/circuits/: CMakeLists.txt  circuitscene.cpp  circuitscene.h  electriccircuit.cpp  electriccircuit.h
src/circuits/edit/: CMakeLists.txt  nodeeditfactory.cpp  nodeeditfactory.h  standardnodetypes.cpp  standardnodetypes.h
src/circuits/graphs/: CMakeLists.txt  abstractdeviatorgraphitem.cpp  abstractdeviatorgraphitem.h  abstractnodegraphitem.cpp  abstractnodegraphitem.h  aceibuttongraphitem.cpp  aceibuttongraphitem.h  bifilarizatorgraphitem.cpp  bifilarizatorgraphitem.h  buttoncontactgraphitem.cpp  buttoncontactgraphitem.h  cablegraphitem.cpp  cablegraphitem.h  circuitcolors.h  commandnodegraphitem.cpp  commandnodegraphitem.h  diodegraphitem.cpp  diodegraphitem.h  electromagnetcontactgraphitem.cpp  electromagnetcontactgraphitem.h  electromagnetgraphitem.cpp  electromagnetgraphitem.h  electromagnetpowergraphitem.cpp  electromagnetpowergraphitem.h  levercontactgraphitem.cpp  levercontactgraphitem.h  lightbulbgraphitem.cpp  lightbulbgraphitem.h  onoffgraphitem.cpp  onoffgraphitem.h  polarityinversiongraphitem.cpp  polarityinversiongraphitem.h  powersourcegraphitem.cpp  powersourcegraphitem.h  relaiscontactgraphitem.cpp  relaiscontactgraphitem.h  relaispowergraphitem.cpp  relaispowergraphitem.h  remotecablecircuitgraphitem.cpp  remotecablecircuitgraphitem.h  (+20 more)
src/circuits/nodes/: CMakeLists.txt  abstractcircuitnode.cpp  abstractcircuitnode.h  abstractdeviatornode.cpp  abstractdeviatornode.h  aceibuttonnode.cpp  aceibuttonnode.h  bifilarizatornode.cpp  bifilarizatornode.h  buttoncontactnode.cpp  buttoncontactnode.h  circuitcable.cpp  circuitcable.h  commandnode.cpp  commandnode.h  diodecircuitnode.cpp  diodecircuitnode.h  electromagnetcontactnode.cpp  electromagnetcontactnode.h  electromagnetnode.cpp  electromagnetnode.h  electromagnetpowernode.cpp  electromagnetpowernode.h  levercontactnode.cpp  levercontactnode.h  lightbulbnode.cpp  lightbulbnode.h  onoffswitchnode.cpp  onoffswitchnode.h  polarityinversionnode.cpp  polarityinversionnode.h  powersourcenode.cpp  powersourcenode.h  relaiscontactnode.cpp  relaiscontactnode.h  relaispowernode.cpp  relaispowernode.h  resistornode.cpp  (+21 more)
src/core/: CMakeLists.txt  electriccircuit.cpp  electriccircuit.h
src/enums/: CMakeLists.txt  aceileverposition.h  cabletypes.h  circuittypes.h  filemodes.h  genericleverposition.h  loadphase.h  signalaspectcodes.cpp  signalaspectcodes.h
src/graph/: CMakeLists.txt  abstractnodegraphitem.cpp  abstractnodegraphitem.h  aceibuttongraphitem.cpp  aceibuttongraphitem.h  cablegraphitem.cpp  cablegraphitem.h  circuitscene.cpp  circuitscene.h  lightbulbgraphitem.cpp  lightbulbgraphitem.h  onoffgraphitem.cpp  onoffgraphitem.h  powersourcegraphitem.cpp  powersourcegraphitem.h  relaiscontactgraphitem.cpp  relaiscontactgraphitem.h  relaispowergraphitem.cpp  relaispowergraphitem.h  simplenodegraphitem.cpp  simplenodegraphitem.h  zoomgraphview.cpp  zoomgraphview.h
src/network/: CMakeLists.txt  peerclient.cpp  peerclient.h  peerconnection.cpp  peerconnection.h  peermanager.cpp  peermanager.h  peerserver.cpp  peerserver.h  remotemanager.cpp  remotemanager.h  remotesession.cpp  remotesession.h  remotesessionsmodel.cpp  remotesessionsmodel.h  replicaobjectmanager.cpp  replicaobjectmanager.h  replicasmodel.cpp  replicasmodel.h
src/nodes/: CMakeLists.txt  abstractcircuitnode.cpp  abstractcircuitnode.h  aceibuttonnode.cpp  aceibuttonnode.h  circuitcable.cpp  circuitcable.h  lightbulbnode.cpp  lightbulbnode.h  onoffswitchnode.cpp  onoffswitchnode.h  powersourcenode.cpp  powersourcenode.h  relaiscontactnode.cpp  relaiscontactnode.h  relaispowernode.cpp  relaispowernode.h  simplecircuitnode.cpp  simplecircuitnode.h
src/objects/: CMakeLists.txt  abstractrelais.cpp  abstractsimulationobject.cpp  abstractsimulationobject.h  abstractsimulationobjectmodel.cpp  abstractsimulationobjectmodel.h  relaismodel.cpp  relaismodel.h  simulationobjectcopyhelper.cpp  simulationobjectcopyhelper.h  simulationobjectfactory.cpp  simulationobjectfactory.h  simulationobjectlineedit.cpp  simulationobjectlineedit.h  simulationobjectlistwidget.cpp  simulationobjectlistwidget.h  simulationobjectmultitypemodel.cpp  simulationobjectmultitypemodel.h  simulationobjectnodesmodel.cpp  simulationobjectnodesmodel.h  simulationobjectoptionswidget.cpp  simulationobjectoptionswidget.h  standardobjecttypes.cpp  standardobjecttypes.h
src/panels/: CMakeLists.txt  abstractpanelitem.cpp  abstractpanelitem.h  panelscene.cpp  panelscene.h  snappablepanelitem.cpp  snappablepanelitem.h
src/serial/: CMakeLists.txt  serialdevice.cpp  serialdevice.h  serialdevicesmodel.cpp  serialdevicesmodel.h  serialmanager.cpp  serialmanager.h
src/translations/: CMakeLists.txt  simra_it.ts
src/utils/: CMakeLists.txt  colorselectionwidget.cpp  colorselectionwidget.h  doubleclickslider.cpp  doubleclickslider.h  enum_desc.cpp  enum_desc.h  enumvaluesmodel.cpp  enumvaluesmodel.h  genericleverutils.cpp  genericleverutils.h  itemobjectreplacedlg.h  itemobjectreplacedlg_impl.hpp  jsondiff.cpp  jsondiff.h  objectproperty.h  tilerotate.cpp  tilerotate.h  zoomgraphview.cpp  zoomgraphview.h
src/views/: CMakeLists.txt  circuitlistmodel.cpp  circuitlistmodel.h  circuitlistwidget.cpp  circuitlistwidget.h  circuitwidget.cpp  circuitwidget.h  layoutloader.cpp  layoutloader.h  modemanager.cpp  modemanager.h  relaislistwidget.cpp  relaislistwidget.h  uilayoutdialog.cpp  uilayoutdialog.h  uilayoutsmodel.cpp  uilayoutsmodel.h  viewmanager.cpp  viewmanager.h
(+279 files in other folders)
